kub-svr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kub-svr
spec:
  ports:
    - port: 8090
      nodePort: 30001
      targetPort: 8080
      protocol: TCP
  selector:
    app: kubapp
    type: NodePort
