kubapp-lb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-kb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: kubapp
