ing.yml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
   
  name: web-ingress
   
  annotations:
   
    nginx.ingress.kubernetes.io/use-regex: "true"
   
spec:
  ingressClassName: nginx
  rules:
   
    - host: devops.akadevops.store
   
      http:
   
        paths:
   
          - path: /
   
            pathType: Prefix
   
            backend:
   
              service:
   
                name: web-svc
   
                port:
   
                  number: 8080
